feat: add custom converter to deal with polymorphic types
